src/App.css
nav {
  display: flex;
  margin: 1.5rem;
  justify-content: space-between;
  padding-bottom: 1.1rem;
  border-bottom: 1.5px solid rgb(211, 211, 211);
}
nav button {
  background: none;
  outline: none;
  border: none;
  cursor: pointer;
}

#side-nav {
  position: fixed;
  top: 0;
  left: -50%;
  margin: 0;
  padding: 0;
  background: rgba(211, 211, 211, 0.5);
  height: 100vh;
  width: 50%;
  transition: 0.5s;
}
.visible {
  left: 0 !important;
}
#side-nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
#side-nav ul li {
  padding: 0;
  margin: 0;
  padding: 10px;
  font-weight: 500;
}
#side-nav ul li a {
  color: #fa885c;
  text-decoration: none;
  cursor: pointer;
}

#logo {
  max-height: 30px;
}
#menu {
  max-height: 25px;
}

#gallery {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 80%;
  padding: 20px;
  margin: auto;
  position: relative;
  z-index: -1;
}

.gallery-card {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 10px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 1rem;
  margin-bottom: 50px;
}
.card-image {
  height: 200px;
  border-radius: 1rem;
}

#filter {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  bottom: 0;
  height: 50%;
  background: rgba(211, 211, 211, 0.8);
  border-radius: 30px 30px 0 0;
  transition: 0.5s;
  z-index: 3;
}
#filters-form {
}

#filter button {
  position: fixed;
  bottom: 0;
  margin-bottom: 5px;
  background: none;
  border: none;
  cursor: pointer;
  z-index: 4;
}
#filter button img {
  width: 24px;
}

